# PretextGraph

./: .gitmodules  .travis.yml  Header.h  LICENSE  LineBufferQueue.cpp  PretextGraph.cpp  README.md  install  meson.build  test_pretextgraph.py
.github/workflows/: deploy.yml  test.yml
